--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,1 +1,4 @@
-3.0.0 - first version of the plugin, reference-based protocol added
+3.0.0b2:
+    - remove cupy
+    - fix test name
+3.0.0b1 - first version of the plugin, reference-based protocol added
