--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,4 @@
+3.0.0b4: default version updated to 0.2.1.6, updated model link, install command and test
 3.0.0b3: default version = 0.1.2
 3.0.0b2:
     - remove cupy
