--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+3.0.1:
+    - update napari installer, fix tomo import output name
+    - adding volume as reference
+    - fix plugin url
 3.0.0: add tomotwin 0.3.0
 3.0.0b4: default version updated to 0.2.1.6, updated model link, install command and test
 3.0.0b3: default version = 0.1.2
