--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+3.2:
+    - split cluster picking into two protocols
+    - add missing params chunk_size and fit_sample_size to cmd args
+    - add a test for cluster-based embedding
+    - cluster tomos embedding now runs in parallel on GPUs
 3.1:
     - update version
     - add input masks option
