add v0.6.1, v0.7.0;add new model; update create mask protocol

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,8 @@
 3.3:
     - fix napari viewer args
-    - add v0.6.1
+    - add v0.6.1, v0.7.0
+    - add new model
+    - update create mask protocol
 3.2:
     - split cluster picking into two protocols
     - add missing params chunk_size and fit_sample_size to cmd args
