--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+3.5:
+    - add v0.9.0b1
+    - change test data to tomotwin tutorial
+    - use 2 GPUs by default
 3.4: add v0.8.0
 3.3:
     - fix napari viewer args
